Add pipeline attribute to batch endpoint
